--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trailoholic",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,10 +16,6 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-<<<<<<< HEAD
-=======
-    "react-router-bootstrap": "^0.26.1",
->>>>>>> 7f09770d9375beb1a9a1e2f7ffdcf16d5813f397
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
