--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.1",
     "mapbox-gl": "^2.8.2",
     "react": "^18.1.0",
+    "react-avatar": "^5.0.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
